--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4956,6 +4956,12 @@ a.thumbnail.active {
   background-color: #dff0d8;
   border-color: #d6e9c6;
 }
+.alert-success-code {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  margin:10px 110px;
+}
 .alert-success hr {
   border-top-color: #c9e2b3;
 }
@@ -4988,6 +4994,12 @@ a.thumbnail.active {
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
+}
+.alert-danger-code {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  margin : 10px 100px;
 }
 .alert-danger hr {
   border-top-color: #e4b9c0;
