--- a/css/style.css
+++ b/css/style.css
@@ -2930,7 +2930,7 @@ a.btn.btn-primary {
 }
 i.train-icon.fa {
     font-size: 100px;
-    color: #0fc0b8;
+    color: #2893ec;
 }
 button.seabtn:focus, button.seabtn:hover {
     background-color: #1f8dd6;
