--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4952,6 +4952,7 @@ a.thumbnail.active {
   color: inherit;
 }
 .alert-success {
+  text-align: center;
   color: #3c763d;
   background-color: #dff0d8;
   border-color: #d6e9c6;
@@ -4991,6 +4992,7 @@ a.thumbnail.active {
   color: #66512c;
 }
 .alert-danger {
+  text-align: center;
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
